crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[memory]-on_zero_results_small_clickbench_q27_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q27"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                      |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: hits.SearchPhrase                                                                                                             |
|               |   Sort: to_timestamp(hits.EventTime) ASC NULLS LAST, hits.SearchPhrase ASC NULLS LAST, fetch=10                                           |
|               |     Projection: hits.SearchPhrase, hits.EventTime                                                                                         |
|               |       Filter: CAST(hits.SearchPhrase AS Utf8View) != Utf8View("")                                                                         |
|               |         TableScan: hits projection=[EventTime, SearchPhrase], partial_filters=[CAST(hits.SearchPhrase AS Utf8View) != Utf8View("")]       |
| physical_plan | ProjectionExec: expr=[SearchPhrase@0 as SearchPhrase]                                                                                     |
|               |   SortExec: TopK(fetch=10), expr=[to_timestamp(EventTime@1) ASC NULLS LAST, SearchPhrase@0 ASC NULLS LAST], preserve_partitioning=[false] |
|               |     CoalescePartitionsExec                                                                                                                |
|               |       ProjectionExec: expr=[SearchPhrase@1 as SearchPhrase, EventTime@0 as EventTime]                                                     |
|               |         FilterExec: CAST(SearchPhrase@1 AS Utf8View) !=                                                                                   |
|               |           RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                           |
|               |             SchemaCastScanExec                                                                                                            |
|               |               FallbackOnZeroResultsScanExec                                                                                               |
|               |                 CoalescePartitionsExec                                                                                                    |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                   |
|               |                     CooperativeExec                                                                                                       |
|               |                       BytesProcessedExec                                                                                                  |
|               |                         DuckSqlExec sql= SELECT "EventTime", "SearchPhrase" FROM "hits"                                                   |
|               |                                                                                                                                           |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------+
