crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[memory]-on_zero_results_small_clickbench_q28_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q28"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                        |
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: l DESC NULLS FIRST, fetch=25                                                                                          |
|               |   Projection: hits.CounterID, avg(length(hits.URL)) AS l, count(Int64(1)) AS c                                              |
|               |     Filter: count(Int64(1)) > Int64(100000)                                                                                 |
|               |       Aggregate: groupBy=[[hits.CounterID]], aggr=[[avg(CAST(length(hits.URL) AS Float64)), count(Int64(1))]]               |
|               |         Filter: CAST(hits.URL AS Utf8View) != Utf8View("")                                                                  |
|               |           TableScan: hits projection=[CounterID, URL], partial_filters=[CAST(hits.URL AS Utf8View) != Utf8View("")]         |
| physical_plan | SortExec: TopK(fetch=25), expr=[l@1 DESC], preserve_partitioning=[false]                                                    |
|               |   CoalescePartitionsExec                                                                                                    |
|               |     ProjectionExec: expr=[CounterID@0 as CounterID, avg(length(hits.URL))@1 as l, count(Int64(1))@2 as c]                   |
|               |       FilterExec: count(Int64(1))@2 > 100000                                                                                |
|               |         AggregateExec: mode=FinalPartitioned, gby=[CounterID@0 as CounterID], aggr=[avg(length(hits.URL)), count(Int64(1))] |
|               |           RepartitionExec: partitioning=Hash([CounterID@0], 16), input_partitions=16                                        |
|               |             AggregateExec: mode=Partial, gby=[CounterID@0 as CounterID], aggr=[avg(length(hits.URL)), count(Int64(1))]      |
|               |               FilterExec: CAST(URL@1 AS Utf8View) !=                                                                        |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                       |
|               |                   SchemaCastScanExec                                                                                        |
|               |                     FallbackOnZeroResultsScanExec                                                                           |
|               |                       CoalescePartitionsExec                                                                                |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                               |
|               |                           CooperativeExec                                                                                   |
|               |                             BytesProcessedExec                                                                              |
|               |                               DuckSqlExec sql= SELECT "CounterID", "URL" FROM hits WHERE (CAST("URL" AS VARCHAR) <> '')     |
|               |                                                                                                                             |
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
