crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[memory]-on_zero_results_small_clickbench_q29_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q29"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                    |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: l DESC NULLS FIRST, fetch=25                                                                                                                                                                                                                                                                                      |
|               |   Projection: regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1")) AS k, avg(length(hits.Referer)) AS l, count(Int64(1)) AS c, min(hits.Referer)                                                                                                                                             |
|               |     Filter: count(Int64(1)) > Int64(100000)                                                                                                                                                                                                                                                                             |
|               |       Aggregate: groupBy=[[regexp_replace(CAST(hits.Referer AS LargeUtf8), LargeUtf8("^https?://(?:www\.)?([^/]+)/.*$"), LargeUtf8("\1")) AS regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))]], aggr=[[avg(CAST(length(hits.Referer) AS Float64)), count(Int64(1)), min(hits.Referer)]] |
|               |         Filter: hits.Referer != LargeBinary("")                                                                                                                                                                                                                                                                         |
|               |           TableScan: hits projection=[Referer], partial_filters=[hits.Referer != LargeBinary("")]                                                                                                                                                                                                                       |
| physical_plan | SortExec: TopK(fetch=25), expr=[l@1 DESC], preserve_partitioning=[false]                                                                                                                                                                                                                                                |
|               |   CoalescePartitionsExec                                                                                                                                                                                                                                                                                                |
|               |     ProjectionExec: expr=[regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))@0 as k, avg(length(hits.Referer))@1 as l, count(Int64(1))@2 as c, min(hits.Referer)@3 as min(hits.Referer)]                                                                                                   |
|               |       FilterExec: count(Int64(1))@2 > 100000                                                                                                                                                                                                                                                                            |
|               |         AggregateExec: mode=FinalPartitioned, gby=[regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))@0 as regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))], aggr=[avg(length(hits.Referer)), count(Int64(1)), min(hits.Referer)]                          |
|               |           RepartitionExec: partitioning=Hash([regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))@0], 32), input_partitions=32                                                                                                                                                              |
|               |             AggregateExec: mode=Partial, gby=[regexp_replace(CAST(Referer@0 AS LargeUtf8), ^https?://(?:www\.)?([^/]+)/.*$, \1) as regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))], aggr=[avg(length(hits.Referer)), count(Int64(1)), min(hits.Referer)]                               |
|               |               FilterExec: Referer@0 !=                                                                                                                                                                                                                                                                                  |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                                                                                                   |
|               |                   SchemaCastScanExec                                                                                                                                                                                                                                                                                    |
|               |                     FallbackOnZeroResultsScanExec                                                                                                                                                                                                                                                                       |
|               |                       CoalescePartitionsExec                                                                                                                                                                                                                                                                            |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                                                                                           |
|               |                           BytesProcessedExec                                                                                                                                                                                                                                                                            |
|               |                             DuckSqlExec sql= SELECT "Referer" FROM "hits"                                                                                                                                                                                                                                               |
|               |                                                                                                                                                                                                                                                                                                                         |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
