crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[memory]-on_zero_results_small_clickbench_q2_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q2"
---
+---------------+----------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                               |
+---------------+----------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: count(Int64(1)) AS count(*)                                                            |
|               |   Aggregate: groupBy=[[]], aggr=[[count(Int64(1))]]                                                |
|               |     Projection:                                                                                    |
|               |       Filter: hits.AdvEngineID != Int16(0)                                                         |
|               |         TableScan: hits projection=[AdvEngineID], partial_filters=[hits.AdvEngineID != Int16(0)]   |
| physical_plan | ProjectionExec: expr=[count(Int64(1))@0 as count(*)]                                               |
|               |   AggregateExec: mode=Final, gby=[], aggr=[count(Int64(1))]                                        |
|               |     CoalescePartitionsExec                                                                         |
|               |       AggregateExec: mode=Partial, gby=[], aggr=[count(Int64(1))]                                  |
|               |         FilterExec: AdvEngineID@0 != 0, projection=[]                                              |
|               |           RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                    |
|               |             SchemaCastScanExec                                                                     |
|               |               FallbackOnZeroResultsScanExec                                                        |
|               |                 CoalescePartitionsExec                                                             |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1            |
|               |                     BytesProcessedExec                                                             |
|               |                       DuckSqlExec sql= SELECT "AdvEngineID" FROM "hits" WHERE ("AdvEngineID" <> 0) |
|               |                                                                                                    |
+---------------+----------------------------------------------------------------------------------------------------+
