crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[memory]-on_zero_results_small_clickbench_q34_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q34"
---
+---------------+-------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                      |
+---------------+-------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                        |
|               |   Projection: hits.URL, count(Int64(1)) AS c                                              |
|               |     Aggregate: groupBy=[[hits.URL]], aggr=[[count(Int64(1))]]                             |
|               |       TableScan: hits projection=[URL]                                                    |
| physical_plan | SortExec: TopK(fetch=10), expr=[c@1 DESC], preserve_partitioning=[false]                  |
|               |   CoalescePartitionsExec                                                                  |
|               |     ProjectionExec: expr=[URL@0 as URL, count(Int64(1))@1 as c]                           |
|               |       AggregateExec: mode=FinalPartitioned, gby=[URL@0 as URL], aggr=[count(Int64(1))]    |
|               |         RepartitionExec: partitioning=Hash([URL@0], 32), input_partitions=32              |
|               |           AggregateExec: mode=Partial, gby=[URL@0 as URL], aggr=[count(Int64(1))]         |
|               |             RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1         |
|               |               SchemaCastScanExec                                                          |
|               |                 FallbackOnZeroResultsScanExec                                             |
|               |                   CoalescePartitionsExec                                                  |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1 |
|               |                       BytesProcessedExec                                                  |
|               |                         DuckSqlExec sql= SELECT "URL" FROM "hits"                         |
|               |                                                                                           |
+---------------+-------------------------------------------------------------------------------------------+
